--- a/Explore/app/src/main/AndroidManifest.xml
+++ b/Explore/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.khachik.explore">
 
     <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
 
     <application
         android:allowBackup="true"
