--- a/Explore/server/package.json
+++ b/Explore/server/package.json
@@ -13,6 +13,7 @@
     "express": "~4.15.2",
     "jade": "~1.11.0",
     "morgan": "~1.8.1",
+    "path": "^0.12.7",
     "pg-dao": "^0.8.3",
     "pg-promise": "^5.9.7",
     "postgres-gen": "^0.10.0",
