Added galery activities

--- a/Explore/app/build.gradle
+++ b/Explore/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 26
     buildToolsVersion "26.0.1"
-    useLibrary  'org.apache.http.legacy'
+    useLibrary 'org.apache.http.legacy'
     defaultConfig {
         applicationId "com.khachik.explore"
         minSdkVersion 21
@@ -25,7 +25,6 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    //noinspection GradleCompatible
     compile 'com.android.support:appcompat-v7:26.+'
     compile 'com.android.support:support-v4:26.+'
     compile 'com.android.support:design:26.+'
@@ -39,6 +38,9 @@ dependencies {
     compile 'com.journeyapps:zxing-android-integration:2.0.1@aar'
     compile 'com.journeyapps:zxing-android-legacy:2.0.1@aar'
     compile 'com.mcxiaoke.volley:library-aar:1.0.0'
-    testCompile 'junit:junit:4.12'
     compile 'com.google.android.gms:play-services:11.0.4'
+    compile 'com.android.volley:volley:1.0.0'
+    compile 'com.google.android.gms:play-services-plus:11.0.4'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
+    testCompile 'junit:junit:4.12'
 }
