--- a/Explore/app/src/main/AndroidManifest.xml
+++ b/Explore/app/src/main/AndroidManifest.xml
@@ -3,11 +3,11 @@
     package="com.khachik.explore">
 
     <uses-permission android:name="android.permission.CAMERA" />
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
         android:allowBackup="true"
@@ -38,17 +38,17 @@
         <activity
             android:name=".Activities.ArticleActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
-            android:theme="@style/AppTheme.NoActionBar"
-            />
-        <activity android:name=".Activities.LoginRegisterActivity"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".Activities.LoginRegisterActivity" />
+
         <meta-data
             android:name="com.google.android.gms.versions"
-            android:value="@integer/google_play_services_version"
-            />
+            android:value="@integer/google_play_services_version" />
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
-            android:value="AIzaSyDi2ugACY_2LfdDe52q2BYJNKMoRz1Yumk"
-            />
+            android:value="AIzaSyDi2ugACY_2LfdDe52q2BYJNKMoRz1Yumk" />
+
+        <activity android:name=".Activities.GalleryActivity" />
     </application>
 
 </manifest>
