--- a/Explore/app/build.gradle
+++ b/Explore/app/build.gradle
@@ -42,5 +42,6 @@ dependencies {
     compile 'com.android.volley:volley:1.0.0'
     compile 'com.google.android.gms:play-services-plus:11.0.4'
     compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'com.google.code.gson:gson:2.8.1'
     testCompile 'junit:junit:4.12'
 }
